[package]
name = "bpe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = {version = "0.13.1"}
serde = "*"
serde_json = "*"
serde_derive = "*"
anyhow = "1.0.65"
chrono = "*"
openssl = { version = "0.10.42", features = ["vendored"] }